--- a/app/Resources/views/main/admin.html.twig
+++ b/app/Resources/views/main/admin.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
 <div class="row">
     <div class="col-xs-4 col-md-2 sidebar">
-        <h2 class="admin-nav-header">Admin Nav!</h2>
+        <h2 class="admin-nav-header">Admin Nav</h2>
         <ul class="nav">
             <li class="active"><a href="{{ path('admin') }}">Overview <span class="sr-only">(current)</span></a></li>
             <li><a href="{{ path('product_list') }}">Products</a></li>
