--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -29,7 +29,7 @@
                 <li><a href="{{ path('db_rebuild') }}">Reset DB</a></li>
             </ul>
         </nav>
-        <h1>Magasin!</h1>
+        <h1>Magasin</h1>
     </div>
     <hr>
     <p class="text-center">Fence security <span class="label label-success">activated</span></p>
